log
Sat 24 Sep 2022 12:02:47 AM UTC: 
 tests:  1|8
total_score: 0/70
a56b6be
Sat 24 Sep 2022 12:52:17 AM UTC: 
 treemap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:17: error: ‘key2’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   45 |     Map->root = createTreeNode(key2, NULL);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:46:23: error: ‘key1’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   46 |     Map->root->left = createTreeNode(key1, NULL);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
995718f
